# MiniBox

./: .gitignore  CMakeLists.txt  MiniBoxConfig.h.in  README.md  TODO
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
docs/: APPLETS.md  TODO
include/: applets.hpp  headers.hpp
src/: MiniBox.cpp
src/coreutils/: TODO
